--- a/index.html
+++ b/index.html
@@ -6,7 +6,275 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <head>
+
+      <div class="">
+        <a href="" id="top">
+          <img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
+        </a>
+        <form action=""></form>
+        <ul>
+          <li><a href="">Закладки: 0</a></li>
+          <li><a href="">Корзина: 0</a></li>
+          <li><a href="">Оформить заказ</a></li>
+        </ul>
+      </div>
+      <div class="">
+        <div class="">
+          <p>Интернет-магазин<br>
+            строительных материалов<br>
+            и инструментов для ремонта</p>
+        </div>
+        <div class="">
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div class="">
+          <button type="button">Войти</button>
+          <button type="button">Регистрация</button>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="catalog.html">Главная</a></li>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Спецпредложения</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+
+    </head>
+
+    <main>
+
+      <h1>Онлайн магазин "ТЕХНОМАРТ"</h1>
+
+      <section>
+        <h2>Категории товаров</h2>
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <a href="catalog.html">на любой вкус</a>
+          </li>
+          <li>
+            <h3>Инструмент</h3>
+            <a href="catalog.html">НА ВСЕ СЛУЧАИ</a>
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <a href="catalog.html">для стройки</a>
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <a href="catalog.html">На 350 ТОВАРОВ</a>
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <a href="catalog.html">Бесплатно</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h3>Перфораторы</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ </a>
+          </li>
+          <li>
+            <h3>Дрели</h3>
+            <p>Соседям на радость!</p>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+          </li>
+        </ul>
+      </section>
+                <!--/КАТЕГОРИИ-->
+
+      <section>
+        <h2>Популярные товары:</h2>
+        <a href=""></a>
+        <ul>
+          <li>
+            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 9000">
+            <p>Перфоратор BOSCH BFG 9000</p>
+            <p>32500 Р.</p>
+            <p>25500 Р.</p>
+          </li>
+          <li>
+            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 3000">
+            <p>Перфоратор BOSCH BFG 3000</p>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+          </li>
+          <li>
+            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 6000">
+            <p>Перфоратор BOSCH BFG 6000</p>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </li>
+          <li>
+            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 2000">
+            <p>Перфоратор BOSCH BFG 2000</p>
+            <p> </p>
+            <p>12500 Р.</p>
+          </li>
+        </ul>
+      </section>
+                <!--/ПОПУЛЯРНЫЕ ТОВАРЫ-->
+
+      <section>
+        <h2>Популярные Производители:</h2>
+        <a href="">все производители</a>
+        <ul>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+        </ul>
+      </section>
+                <!--ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
+
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <ul>
+            <li>
+              <h3>Доставка</h3>
+              <p>Мы с удовольствием доставим ваш товар прямо<br>
+                к вашему подъезду совершенно бесплатно!<br>
+                Ведь мы неплохо заработаем,<br>
+                поднимая его на ваш этаж!</p>
+
+            </li>
+            <li>
+              <h3>Гарантия</h3>
+              <p>Если купленный у нас товар поломается или заискрит, <br>
+                а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
+                Дом уж восстановите как-нибудь сами.</p>
+
+            </li>
+            <li>
+              <h3>Кредит</h3>
+              <p>Кредит<br>
+                Залезть в долговую яму стало проще!<br>
+                Кредитные консультанты придут вам на помощь.</p>
+              <a href="">ОТПРАВИТЬ ЗАЯВКУ</a>
+            </li>
+          </ul>
+      </section>
+                <!--/СЕРВИСЫ-->
+
+      <section>
+        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+           ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+        </p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+          Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>
+            <p>Деловые линии</p>
+          </li>
+          <li>
+            <p>Автотрейдинг</p>
+          </li>
+          <li>
+            <p>ЖелДорЭкспедиция</p>
+          </li>
+        </ul>
+        <a href="">Подробнее о компании</a>
+      </section>
+                <!--/КОМПАНИЯ «Техномарт»-->
+
+      <section>
+        <h2>КОНТАКТЫ</h2>
+        <p>Вы можете забрать товар сами,<br>
+          заехав в наш офис:</p>
+          <!--ФОРМА С КАРТОЙ-->
+        <a href="tel:+78125550555">Заблудились? Напишите НАМ!</a>
+      </section>
+                <!--/КОНТАКТЫ-->
+    </main>
+
+    <footer>
+
+
+      <div class="">
+        <a href="#top"><img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
+        <ul>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </div>
+
+
+      <div class="">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+        <ul>
+          <li><a href="catalog.html">Материалы</a></li>
+          <li><a href="catalog.html">Техника</a></li>
+          <li><a href="catalog.html">Инструмент</a></li>
+          <li><a href="catalog.html">Спецпредложения</a></li>
+        </ul>
+      </div>
+
+      <div class="">
+
+        <section>
+          <h2>Авторские парва</h2>
+          <p>© 2010–2019 Компания «Техномарт»<br>
+            Все права защищены</p>
+        </section>
+                  <!--/Авторские парва-->
+
+        <section>
+          <h2>Социальные сети</h2>
+          <ul>
+            <li><a href="">Вк</a></li>
+            <li><a href="">ФБ</a></li>
+            <li><a href="">ИНСТАГРАМ</a></li>
+          </ul>
+        </section>
+                  <!--/Социальные сети-->
+
+        <section>
+          <h2>Разработка</h2>
+          <div class="">
+            <p>Обратная связь:</p>
+            <a href="">mail@htmlacademy.ru</a>
+          </div>
+          <div class="">
+            <p>Разработано —</p>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+          </div>
+        </section>
+                  <!--/Разработка-->
+
+      </div>
+    </footer>
+
+    <section>
+      <h2>Личный кабинет</h2>
+      <button type="button">Закрыть</button>
+    </section>
+              <!--/ЛИЧНЫЙ КАБИНЕТ-->
+
+    <section>
+      <h2>Как до нас добратсья?</h2>
+      <button type="button">Закрыть</button>
+    </section>
+              <!--/Как до нас добратсья?-->
 
   </body>
 </html>
