--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
   </head>
   <body>
 
-    <head>
+    <header>
 
-      <div class="">
-        <a href="" id="top">
+      <div class="header-top">
+        <a class="header-logo" href="" id="top">
           <img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
         </a>
         <form action=""></form>
-        <ul>
-          <li><a href="">Закладки: 0</a></li>
-          <li><a href="">Корзина: 0</a></li>
-          <li><a href="">Оформить заказ</a></li>
+        <ul class="product-order">
+          <li class="product-order-irem product-marker"><a href="">Закладки: 0</a></li>
+          <li class="product-order-irem product-cart"><a href="">Корзина: 0</a></li>
+          <li class="product-order-irem ordering"><a href="">Оформить заказ</a></li>
         </ul>
       </div>
-      <div class="">
+      <div class="header-midle">
         <div class="">
           <p>Интернет-магазин<br>
             строительных материалов<br>
             и инструментов для ремонта</p>
         </div>
-        <div class="">
+        <div class="contact-for-us">
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
-        <div class="">
-          <button type="button">Войти</button>
-          <button type="button">Регистрация</button>
+        <div class="user-menu ">
+          <a class="button" href="">Войти</a>
+          <a class="button" href="">Регистрация</a>
         </div>
       </div>
-      <nav>
-        <ul>
-          <li><a href="catalog.html">Главная</a></li>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Каталог</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Спецпредложения</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="site-navigation">
+        <ul class="site-navigation-list">
+          <li class="site-navigation-item"><a href="">Главная</a></li>
+          <li class="site-navigation-item"><a href="">Компания</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation-item"><a href="">Новости</a></li>
+          <li class="site-navigation-item"><a href="">Спецпредложения</a></li>
+          <li class="site-navigation-item"><a href="">Доставка</a></li>
+          <li class="site-navigation-item"><a href="">Контакты</a></li>
         </ul>
       </nav>
 
-    </head>
+    </header>
 
     <main>
 
