Исправлена ошибка в названии класса

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </a>
         <form action=""></form>
         <ul class="product-order">
-          <li class="product-order-irem product-marker"><a href="">Закладки: 0</a></li>
-          <li class="product-order-irem product-cart"><a href="">Корзина: 0</a></li>
-          <li class="product-order-irem ordering"><a href="">Оформить заказ</a></li>
+          <li class="product-order-item product-marker"><a href="">Закладки: 0</a></li>
+          <li class="product-order-item product-cart"><a href="">Корзина: 0</a></li>
+          <li class="product-order-item ordering"><a href="">Оформить заказ</a></li>
         </ul>
       </div>
       <div class="header-midle">
