Стилизация главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
       </ul>
     </div>
     <div class="header-middle">
-      <div class="">
+      <div class="header-midle-block">
         <p>Интернет-магазин<br>
           строительных материалов<br>
           и инструментов для ремонта</p>
@@ -32,11 +32,11 @@
       <div class="user-menu">
         <div class="user-logo">
           <p class="user-name">Равшан Джамшутович</p>
-          <button type="button"></button>            <!--КНОПКА ВЫХОДА ИЗ ПРОФИЛЯ-->>
+          <button type="button"></button>            <!--КНОПКА ВЫХОДА ИЗ ПРОФИЛЯ-->
         </div>
-        <ul class="">
-          <li><a href="">Мои заказы</a></li>
-          <li><a href="">Личный кабинет</a></li>
+        <ul class="user-menu">
+          <li class="user-menu-link"><a href="">Мои заказы</a></li>
+          <li class="user-menu-link"><a href="">Личный кабинет</a></li>
         </ul>
       </div>
     </div>
@@ -54,5 +54,156 @@
 
   </header>
 
+  <main>
+    <h1>ПЕРФОРАТОРЫ</h1>
+    <ul>
+      <li><a href="">Каталог</a></li>
+      <li><a href="">Инструмент</a></li>
+      <li>Перфораторы</li>
+    </ul>
+
+    <section>
+      <h2>ФИЛЬТР:</h2>
+      <!-- Здесь будет форма фильтра -->
+    </section>
+
+    <section>
+      <h2>СОРТИРОВКА:</h2>
+      <!-- Здесь будет форма сортировки -->
+    </section>
+
+    <section>
+      <h2>Список перфораторов</h2>
+      <ul>
+        <li><a href="">
+          <img src="img/product-1.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 6000</h3>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-2.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 6000</h3>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-3.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 6000</h3>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-4.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 3000</h3>
+          <p>22500 Р.</p>
+          <button type="button">15500 Р.</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-5.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 6000</h3>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </a></li>
+        <li><a href=""></a></li>
+        <img src="img/product-6.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 2000</h3>
+          <button type="button">12500 Р.</button>
+        <li><a href="">
+          <img src="img/product-7.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 3000</h3>
+          <p>22500 Р.</p>
+          <button type="button">15500 Р..</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-8.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 6000</h3>
+          <p>30500 Р.</p>
+          <button type="button">25500 Р.</button>
+        </a></li>
+        <li><a href="">
+          <img src="img/product-9.jpg" alt="">
+          <h3>Перфоратор BOSCH<br> BFG 2000</h3>
+
+          <button type="button">12500 Р.</button>
+        </a></li>
+      </ul>
+      <ul>
+        <li><a >1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">СЛЕДУЮЩАЯ</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br>
+        В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </section>
+  </main>
+
+  <footer>
+
+
+    <div class="">
+      <a href="#top"><img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
+      <ul>
+        <li><a href="">Компания</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </div>
+
+
+    <div class="">
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      </p>
+      <ul>
+        <li><a href="catalog.html">Материалы</a></li>
+        <li><a href="catalog.html">Техника</a></li>
+        <li><a href="catalog.html">Инструмент</a></li>
+        <li><a href="catalog.html">Спецпредложения</a></li>
+      </ul>
+    </div>
+
+    <div class="">
+
+      <section>
+        <h2>Авторские парва</h2>
+        <p>© 2010–2019 Компания «Техномарт»<br>
+          Все права защищены</p>
+      </section>
+                <!--/Авторские парва-->
+
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li><a href="">Вк</a></li>
+          <li><a href="">ФБ</a></li>
+          <li><a href="">ИНСТАГРАМ</a></li>
+        </ul>
+      </section>
+                <!--/Социальные сети-->
+
+      <section>
+        <h2>Разработка</h2>
+        <div class="">
+          <p>Обратная связь:</p>
+          <a href="">mail@htmlacademy.ru</a>
+        </div>
+        <div class="">
+          <p>Разработано —</p>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </div>
+      </section>
+                <!--/Разработка-->
+
+    </div>
+  </footer>
 </body>
 </html>
