--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="page-body">
 
-    <header>
+    <header class="main-header">
 
       <div class="header-top">
-        <a class="header-logo" href="" id="top">
-          <img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
+        <a class="header-logo" href="" >
+          <img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
         </a>
         <form action=""></form>
         <ul class="product-order">
@@ -20,7 +23,7 @@
         </ul>
       </div>
       <div class="header-midle">
-        <div class="">
+        <div class="header-midle-block">
           <p>Интернет-магазин<br>
             строительных материалов<br>
             и инструментов для ремонта</p>
@@ -30,8 +33,8 @@
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="user-menu ">
-          <a class="button" href="">Войти</a>
-          <a class="button" href="">Регистрация</a>
+          <a class="user-button login-link" href="">Войти</a>
+          <a class="user-button registr-link" href="">Регистрация</a>
         </div>
       </div>
       <nav class="site-navigation">
@@ -48,199 +51,204 @@
 
     </header>
 
-    <main>
+    <main class="container">
 
-      <h1>Онлайн магазин "ТЕХНОМАРТ"</h1>
+      <h1 class="visually-hidden">Онлайн магазин "ТЕХНОМАРТ"</h1>
 
-      <section>
-        <h2>Категории товаров</h2>
-        <ul>
-          <li>
+      <section class="product-categories">
+        <h2 class="visually-hidden">Категории товаров</h2>
+        <ul class="categories-list">
+          <li class="categories-item">
             <h3>Материалы</h3>
             <a href="catalog.html">на любой вкус</a>
           </li>
-          <li>
+          <li class="categories-item">
             <h3>Инструмент</h3>
             <a href="catalog.html">НА ВСЕ СЛУЧАИ</a>
           </li>
-          <li>
+          <li class="categories-item">
             <h3>Техника</h3>
             <a href="catalog.html">для стройки</a>
           </li>
-          <li>
+          <li class="categories-item">
             <h3>Скидки 50%</h3>
             <a href="catalog.html">На 350 ТОВАРОВ</a>
           </li>
-          <li>
+          <li class="categories-item">
             <h3>Доставка</h3>
             <a href="catalog.html">Бесплатно</a>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="categories-slider">
+          <li class="slider-item">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ </a>
+            <img src="img/catalog-perf.jpg" width="620" height="266" alt="Мужчина в каске с перфоратором фирмы BOSH">
+            <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ </a>
           </li>
-          <li>
+          <li class="slider-item">
             <h3>Дрели</h3>
             <p>Соседям на радость!</p>
-            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+            <img src="img/drill-slider.jpg" alt="Мужчина в каске с дрелью фирмы BOSH">
+            <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
           </li>
         </ul>
       </section>
                 <!--/КАТЕГОРИИ-->
 
-      <section>
-        <h2>Популярные товары:</h2>
-        <a href=""></a>
-        <ul>
-          <li>
-            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 9000">
+      <section class="popular-product">
+        <div class="popular-product-block">
+          <h2>Популярные товары:</h2>
+          <a class="button" href="catalog.html">все популярные товары</a>
+        </div>
+        <ul class="popular-product-list">
+          <li class="popular-product-item">
+            <img src="img/poppular-product-1.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 9000">
             <p>Перфоратор BOSCH BFG 9000</p>
             <p>32500 Р.</p>
-            <p>25500 Р.</p>
+            <a href="">25500 Р.</a>
           </li>
-          <li>
-            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 3000">
+          <li class="popular-product-item">
+            <img src="img/product-3.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 3000">
             <p>Перфоратор BOSCH BFG 3000</p>
             <p>22500 Р.</p>
-            <p>15500 Р.</p>
+            <a href="">15500 Р.</a>
           </li>
-          <li>
-            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 6000">
+          <li class="popular-product-item">
+            <img src="img/product-5.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 6000">
             <p>Перфоратор BOSCH BFG 6000</p>
             <p>30500 Р.</p>
-            <p>25500 Р.</p>
+            <a href="">25500 Р.</a>
           </li>
-          <li>
-            <img src="http://placehold.it/184x164" alt="Перфоратор BOSCH BFG 2000">
+          <li class="popular-product-item">
+            <img src="img/product-9.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 2000">
             <p>Перфоратор BOSCH BFG 2000</p>
-            <p> </p>
-            <p>12500 Р.</p>
+            <p></p>
+            <a href="">12500 Р.</a>
           </li>
         </ul>
       </section>
                 <!--/ПОПУЛЯРНЫЕ ТОВАРЫ-->
 
-      <section>
-        <h2>Популярные Производители:</h2>
-        <a href="">все производители</a>
-        <ul>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
-          <li><a href=""><img src="http://placehold.it/220x145" alt=""></a></li>
+      <section class="popular-makers">
+        <div class="popular-makers-block">
+          <h2>Популярные Производители:</h2>
+          <a class="button" href="">все производители</a>
+        </div>
+        <ul class="makers-list">
+          <li class="makers-item"><a href=""><img src="img/bosh-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/makita-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/dewalt-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/interskol-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/hitachi-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/lg-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/aeg-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item"><a href=""><img src="img/metabo-product.jpg" width="220" height="145" alt=""></a></li>
         </ul>
       </section>
                 <!--ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
 
-      <section>
+      <section class="services">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-          <ul>
-            <li>
+          <ul class="services-list">
+            <li class="services-item">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо<br>
                 к вашему подъезду совершенно бесплатно!<br>
                 Ведь мы неплохо заработаем,<br>
                 поднимая его на ваш этаж!</p>
-
             </li>
-            <li>
+            <li class="services-item">
               <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит, <br>
                 а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
                 Дом уж восстановите как-нибудь сами.</p>
-
             </li>
-            <li>
+            <li class="services-item">
               <h3>Кредит</h3>
               <p>Кредит<br>
                 Залезть в долговую яму стало проще!<br>
                 Кредитные консультанты придут вам на помощь.</p>
-              <a href="">ОТПРАВИТЬ ЗАЯВКУ</a>
+              <a class="button" href="">ОТПРАВИТЬ ЗАЯВКУ</a>
             </li>
           </ul>
       </section>
                 <!--/СЕРВИСЫ-->
+      <div class="index-columns">
+        <section class="company">
+          <h2>КОМПАНИЯ «Техномарт»</h2>
+          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+            ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+          </p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+            Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="delivery-list">
+            <li class="delivery-item">
+              <p>Деловые линии</p>
+            </li>
+            <li class="delivery-item">
+              <p>Автотрейдинг</p>
+            </li>
+            <li class="delivery-item">
+              <p>ЖелДорЭкспедиция</p>
+            </li>
+          </ul>
+          <a class="button" href="">Подробнее о компании</a>
+        </section>
+                  <!--/КОМПАНИЯ «Техномарт»-->
 
-      <section>
-        <h2>КОМПАНИЯ «Техномарт»</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
-           ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-        </p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компаниями:</p>
-        <ul>
-          <li>
-            <p>Деловые линии</p>
-          </li>
-          <li>
-            <p>Автотрейдинг</p>
-          </li>
-          <li>
-            <p>ЖелДорЭкспедиция</p>
-          </li>
-        </ul>
-        <a href="">Подробнее о компании</a>
-      </section>
-                <!--/КОМПАНИЯ «Техномарт»-->
-
-      <section>
-        <h2>КОНТАКТЫ</h2>
-        <p>Вы можете забрать товар сами,<br>
-          заехав в наш офис:</p>
-          <!--ФОРМА С КАРТОЙ-->
-        <a href="tel:+78125550555">Заблудились? Напишите НАМ!</a>
-      </section>
-                <!--/КОНТАКТЫ-->
+        <section class="contacts">
+          <h2>КОНТАКТЫ</h2>
+          <p>Вы можете забрать товар сами,<br>
+            заехав в наш офис:</p>
+            <!--ФОРМА С КАРТОЙ-->
+          <a class="button" href="tel:+78125550555">Заблудились? Напишите НАМ!</a>
+        </section>
+                  <!--/КОНТАКТЫ-->
+      </div>
     </main>
 
-    <footer>
+    <footer class="page-footer main-footer">
 
 
-      <div class="">
-        <a href="#top"><img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
-        <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+      <div class="footer-site-navigation">
+        <a href="#"><img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item"><a href="">Компания</a></li>
+          <li class="footer-navigation-item"><a href="">Новости</a></li>
+          <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="footer-navigation-item"><a href="">Доставка</a></li>
+          <li class="footer-navigation-item"><a href="">Контакты</a></li>
         </ul>
       </div>
 
 
-      <div class="">
+      <div class="footer-midle-block">
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         </p>
-        <ul>
-          <li><a href="catalog.html">Материалы</a></li>
-          <li><a href="catalog.html">Техника</a></li>
-          <li><a href="catalog.html">Инструмент</a></li>
-          <li><a href="catalog.html">Спецпредложения</a></li>
+        <ul class="footer-catalog-navigation-list">
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Материалы</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Техника</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Инструмент</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Спецпредложения</a></li>
         </ul>
       </div>
 
-      <div class="">
+      <div class="footer-under-block">
 
-        <section>
-          <h2>Авторские парва</h2>
+        <section class="copyright">
+          <h2 class="visually-hidden">Авторские парва</h2>
           <p>© 2010–2019 Компания «Техномарт»<br>
             Все права защищены</p>
         </section>
                   <!--/Авторские парва-->
 
-        <section>
-          <h2>Социальные сети</h2>
-          <ul>
+        <section class="socials">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="socials-list">
             <li><a href="">Вк</a></li>
             <li><a href="">ФБ</a></li>
             <li><a href="">ИНСТАГРАМ</a></li>
@@ -248,13 +256,13 @@
         </section>
                   <!--/Социальные сети-->
 
-        <section>
-          <h2>Разработка</h2>
-          <div class="">
+        <section class="development">
+          <h2 class="visually-hidden">Разработка</h2>
+          <div class="feedback">
             <p>Обратная связь:</p>
             <a href="">mail@htmlacademy.ru</a>
           </div>
-          <div class="">
+          <div class="development-proj">
             <p>Разработано —</p>
             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </div>
